--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles.css">
-        <title></title>
+        <link rel="stylesheet" href="/styles.css">
+        <title>Petition by Imad</title>
     </head>
     <body>
 
@@ -14,10 +14,9 @@
         <main>
             {{{body}}}
         </main>
-        
+
         <footer>
-            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-            <script src="script.js" charset="utf-8"></script>
+            
         </footer>
 
     </body>
