--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -29,3 +29,6 @@
 
     </form>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="/script.js" charset="utf-8"></script>
