Finished Part Two

--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -1,5 +1,6 @@
-<div class="input-container">
+
     <h1>Thanks for signing our petition</h1>
     <img id="main-image" src="/images/main.png" alt="">
+
+    <img src="{{sigImage}}" alt="">
     <p><a href="/petition/signers">See all {{totalNumSignatures}} Signatures</a></p>
-</div>
