--- a/views/signed.handlebars
+++ b/views/signed.handlebars
@@ -2,5 +2,8 @@
     <h1>Thanks for signing our petition</h1>
     <img id="main-image" src="/images/main.png" alt="">
 
+    <p class="petition-text">I, {{first}} {{last}}, demand that the Commisionser of Nature County allocate funds for a new park in the Adventure District.
+        This district does not have any parks.  Our children need to have a place where they can experience nature and play outdoors.</p>
+        <br>
     <img src="{{sigImage}}" alt="">
     <p><a href="/petition/signers">See all {{totalNumSignatures}} Signatures</a></p>
