--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,10 +1,21 @@
 <img id="main-image" src="/images/main.png" alt="">
 
 <h3>We the undersigned demand that action must be taken to prevent XYZ</h3>
+
+
 {{#allSigners}}
-<div class="all-signers">
-        <p>{{first}} {{last}}</p>
-</div>
+    <div class="all-signers">
+        {{#if url}}
+        <p>
+            <a href="{{url}}" target="_blank" >{{first}} {{last}}</a>  |  {{age}}  |  <a href="/petition/signers:{{city}}">{{city}}</a>
+        </p>
+        {{else}}
+        <p>
+            {{first}} {{last}}  |  {{age}}  |  <a href="/petition/signers:{{city}}">{{city}}</a>
+        </p>
+        {{/if}}
+    </div>
 {{/allSigners}}
+
 
 <button type="button" onclick="window.location.href = '/petition/signed';" name="back-button">Go Back</button>
