--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -6,13 +6,13 @@
 {{#allSigners}}
     <div class="all-signers">
         {{#if url}}
-        <p>
-            <a href="{{url}}" target="_blank" >{{first}} {{last}}</a>  |  {{age}}  |  <a href="/petition/signers:{{city}}">{{city}}</a>
-        </p>
+            <p>
+                <a href="{{url}}" target="_blank" >{{first}} {{last}}</a> {{age}} <a href="/petition/signers/{{city}}">{{city}}</a>
+            </p>
         {{else}}
-        <p>
-            {{first}} {{last}}  |  {{age}}  |  <a href="/petition/signers:{{city}}">{{city}}</a>
-        </p>
+            <p>
+                {{first}} {{last}} {{age}} <a href="/petition/signers/{{city}}">{{city}}</a>
+            </p>
         {{/if}}
     </div>
 {{/allSigners}}
