--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,7 +13,7 @@
        <br>
        <input type="text" name="city" placeholder="City">
        <br>
-       <input type="text" name="homepage" placeholder="https://www.homepage.com">
+       <input type="url" name="homepage" placeholder="https://www.homepage.com">
        <!-- BUTTONS -->
        <input type="hidden" name="_csrf" value="{{csrfToken}}">
 
