Updated Part 5 and debugged code

--- a/views/editprofile.handlebars
+++ b/views/editprofile.handlebars
@@ -28,7 +28,7 @@
         <br>
         <input type="text" name="city" placeholder="City" value="{{city}}">
         <br>
-        <input type="url" name="homepage" placeholder="https://www.homepage.com" value="{{url}}">
+        <input type="url" name="url" placeholder="https://www.homepage.com" value="{{url}}">
         {{/profileInfo}}
 
        <!-- buttons -->
