Finished Express Router Implementation

--- a/views/editprofile.handlebars
+++ b/views/editprofile.handlebars
@@ -39,6 +39,6 @@
            <button id="register">Update Profile</button>
        </div>
     </form>
-    <button class="delete">Delete Account</button>
+    <a href="/delete"><button class="delete">Delete Account</button></a>
 
 </div>
