--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,5 @@
-<h1>This petition is about something I haven't thought about.  But this is going to be a tag line.</h1>
 
-<img id="main-image" src="/images/main.png" alt="">
+<p class="undersigned">Enter Profile Details</p>
 
 {{#if error}}
     <span class="error">Please enter a valid URL</span>
