--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,30 +1,31 @@
-<h1>This petition is about something I haven't thought about.  But this is going to be a tag line.</h1>
-
-<img id="main-image" src="/images/main.png" alt="">
-
-{{#if error}}
-    <span class="error">All fields are required</span>
-{{/if}}
+<div id="main-image">
+    <img src="/images/main.png" alt="">
+</div>
 
 <div class="input-container">
+    <div class="error-messages">
+        {{#if error}}
+            <p class="error">All fields are required</p>
+        {{/if}}
+        {{#if emailError}}
+            <p class="error">A user with that email already exists.  Please login <a href="/login">here</a></p>
+        {{/if}}
+    </div>
+
     <form class="input" method="POST">
         <!-- Input Fiels -->
        <input type="text" name="first" placeholder="First Name">
        <br>
-       <input type="text" name="last" placeholder="Last Name">
+      <input type="text" name="last" placeholder="Last Name">
        <br>
        <input type="email" name="email" placeholder="Email">
        <br>
        <input type="password" name="password" placeholder="Password">
-       <br>
-       <!-- BUTTONS -->
+       <!-- Hidden Fields -->
        <input type="hidden" name="_csrf" value="{{csrfToken}}">
-
        <!-- buttons -->
        <div class="button-container">
-           <button id="register">JOIN OUR CAUSE!</button>
+           <button id="register">JOIN OUR CAUSE</button>
        </div>
     </form>
 </div>
-<br>
-<h4>Already a member? <a href="/login">Login Here</a> </h4>
