--- a/views/editprofile.handlebars
+++ b/views/editprofile.handlebars
@@ -35,7 +35,7 @@
         {{/profileInfo}}
 
        <!-- buttons -->
-       <div class="button-container">
+       <div class="update-profile">
            <button id="register">Update Profile</button>
        </div>
     </form>
