--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -13,6 +13,7 @@
             <p class="error">Signature is required</p>
         {{/if}}
     </div>
+    <span class="canvas-text">Please either use your mouse or touchscreen to sign.</span>
     <form class="input" method="POST">
        <!-- CANVAS -->
        <canvas id="canvas" width="610px" height="230px"></canvas>
