--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,15 +12,17 @@
             {{#if loggedIn}}
             <img id="logo" src="/images/main.png" alt="">
             <nav>
-                <a href="/petition">3  Petition  3</a><a href="/profile/edit">3  Edit Profile  3</a><a href="/logout">3  Logout  3</a>
+                <a href="/profile/edit">3  Welcome {{first}}  3</a><a href="/petition">3  Petition  3</a><a href="/profile/edit">3  Edit Profile  3</a><a href="/logout">3  Logout  3</a>
             </nav>
             {{/if}}
             {{#if registration}}
+            <img src="" alt="">
             <nav>
                 <a href="/login">3  Login  3</a>
             </nav>
             {{/if}}
             {{#if loginPage}}
+            <img src="" alt="">
             <nav>
                 <a href="/registration">3  Register  3</a>
             </nav>
@@ -32,8 +34,13 @@
         </main>
 
         <footer>
-
+            <span class="footer-text">
+                <img src="\images\dino_left.png">Built with tiny hands
+                <img src="\images\dino.png" alt="">
+            </span>
+            <div class="tinyhands">
+                <img src="\images\tinyhands.gif" alt="">
+            </div>
         </footer>
-
     </body>
 </html>
